<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/yesno"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlColorTop"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/gradient2">

        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_weight"
            android:layout_below="@+id/rlColorTop"
            android:background="@color/colorPrimaryLight" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/dialog_circle" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/imageView5"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logout_variant"
            android:transitionName="icon"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:background="@color/white"
        android:layout_marginLeft="@dimen/checkbox_margin"
        android:layout_marginRight="@dimen/checkbox_margin">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/add_margin"
            android:layout_marginRight="@dimen/add_margin"
            android:text="@string/title"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sub_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_margin"
            android:layout_marginRight="@dimen/add_margin"
            android:layout_marginTop="@dimen/checkbox_margin"
            android:backgroundTint="@color/colorPrimaryLight"
            android:text="@string/are_you_sure"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sub_size"
            android:layout_below="@+id/tvTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvQuestion">

            <Button
                android:id="@+id/bNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/bYes"
                android:background="?android:attr/selectableItemBackground"
                android:minWidth="@dimen/yesno_button_width"
                android:text="@string/cancel"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="?android:attr/selectableItemBackground"
                android:minWidth="@dimen/yesno_button_width"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>