<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlColorTop"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/gradient2">

        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_weight"
            android:layout_below="@+id/rlColorTop"
            android:background="@color/colorPrimaryLight" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/dialog_circle"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_shopping_cart"
            android:tint="@color/white"
            android:layout_alignTop="@+id/imageView5" />

        <ImageView
            android:id="@+id/ivCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="4dp"
            android:backgroundTint="@color/lightGray"
            app:srcCompat="@drawable/ic_close" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/add_margin"
            android:text="@string/start_my_trip"
            android:textAlignment="textStart"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/sub_size"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlNearbyStores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:layout_below="@+id/div1"
            android:layout_marginEnd="@dimen/divider_side_margins"
            android:layout_marginStart="@dimen/divider_side_margins"
            android:layout_marginTop="8dp"
            android:layout_margin="@dimen/checkbox_margin"
            android:layout_marginBottom="@dimen/checkbox_margin">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/nearby_stores"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/body_size"
                android:layout_marginBottom="@dimen/add_margin"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/checkbox_margin"
                android:layout_marginEnd="@dimen/add_margin"
                app:srcCompat="@drawable/ic_search" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/div1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlMyStore"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/divider_side_margins"
            android:layout_marginStart="@dimen/divider_side_margins"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/divider" />

        <RelativeLayout
            android:id="@+id/rlMyStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/checkbox_margin"
            android:layout_marginRight="@dimen/checkbox_margin"
            android:layout_marginBottom="@dimen/checkbox_margin"
            android:layout_marginTop="@dimen/checkbox_margin"
            android:background="?android:attr/selectableItemBackground"
            android:layout_below="@+id/tvTitle"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/checkbox_margin"
                android:layout_marginEnd="@dimen/add_margin"
                app:srcCompat="@drawable/ic_favorite"
                android:backgroundTint="@color/yellow"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imageView3"
                android:text="@string/our_favorite_store"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/body_size" />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>